--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.ant04x.flamer">
    <application
-        android:label="flamer"
+        android:label="Flamer"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
