--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   material_design_icons_flutter: ^4.0.5955
   url_launcher: ^6.0.3
+  firebase_core: ^1.0.3
+  firebase_database: ^6.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
