--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   url_launcher: ^6.0.3
   firebase_core: ^1.0.3
   firebase_database: ^6.1.2
+  firebase_auth: ^1.1.0
+  google_sign_in: ^5.0.2
 
 dev_dependencies:
   flutter_test:
