--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,10 @@ dependencies:
   material_design_icons_flutter: ^5.0.5955-rc.1
   url_launcher: ^6.0.3
   firebase_core: ^1.0.3
-  firebase_database: ^6.1.2
   firebase_auth: ^1.1.0
   google_sign_in: ^5.0.2
   flutter_svg: ^0.21.0+1
+  cloud_firestore: ^1.0.5
 
 dev_dependencies:
   flutter_test:
