--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_sign_in: ^5.0.2
   flutter_svg: ^0.21.0+1
   cloud_firestore: ^1.0.5
+  fluttertoast: ^8.0.6
 
 dev_dependencies:
   flutter_test:
