--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_svg: ^0.21.0+1
   cloud_firestore: ^1.0.5
   fluttertoast: ^8.0.6
+  firebase_messaging: ^9.1.3
 
 dev_dependencies:
   flutter_test:
