--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cloud_firestore: ^1.0.5
   fluttertoast: ^8.0.6
   firebase_messaging: ^9.1.3
+  firebase: ^9.0.1 # Para web
+
 
 dev_dependencies:
   flutter_test:
