--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,11 @@ dependencies:
   url_launcher: ^6.0.3
   firebase_core: ^1.0.3
   firebase_auth: ^1.1.0
-  firebase_auth_web: ^1.1.2
-  google_sign_in: ^5.0.2 # Puede que falte
-  flutter_svg: ^0.21.0+1 # Sin soporte web
+  google_sign_in: ^5.0.2 # NO MAC, WIN NI LINUX
+  flutter_svg: ^0.21.0+1
   cloud_firestore: ^1.0.5
-  fluttertoast: ^8.0.6
+  # fluttertoast: ^8.0.6
   firebase_messaging: ^9.1.3
-  firebase: ^9.0.1 # Para web
 
 
 dev_dependencies:
