--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cloud_firestore: ^1.0.5
   # fluttertoast: ^8.0.6
   firebase_messaging: ^9.1.3
+  shared_preferences: ^2.0.5
+  provider: ^5.0.0
 
 
 dev_dependencies:
