--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_messaging: ^9.1.3
   shared_preferences: ^2.0.5
   provider: ^5.0.0
+  draggable_scrollbar: ^0.1.0
 
 
 dev_dependencies:
