Notificaciones web en marcha.

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flamer",
-    "short_name": "flamer",
+    "name": "Flamer",
+    "short_name": "Flamer",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
