--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.0.5
   provider: ^5.0.0
   draggable_scrollbar: ^0.1.0
+  auto_size_text: ^3.0.0-nullsafety.0
 
 
 dev_dependencies:
