--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -32,7 +32,7 @@ dependencies:
   url_launcher: ^6.0.3
   firebase_core: ^1.2.0
   firebase_auth: ^1.2.0
-  google_sign_in: ^5.0.3 # NO MAC, WIN NI LINUX
+  # google_sign_in: ^5.0.3 # NO MAC, WIN NI LINUX
   flutter_svg: ^0.21.0+1
   cloud_firestore: ^2.2.0
   firebase_messaging: ^10.0.0
@@ -40,6 +40,8 @@ dependencies:
   provider: ^5.0.0
   draggable_scrollbar: ^0.1.0
   auto_size_text: ^3.0.0-nullsafety.0
+  github_sign_in: ^0.0.4
+  google_api_availability: ^3.0.1
 
 
 dev_dependencies:
