--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
   url_launcher: ^6.0.3
   firebase_core: ^1.2.0
   firebase_auth: ^1.2.0
-  # google_sign_in: ^5.0.3 # NO MAC, WIN NI LINUX
-  flutter_svg: ^0.21.0+1
+  # google_sign_in: ^5.0.3 # NO MAC
+  # flutter_svg: ^0.21.0+1
   cloud_firestore: ^2.2.0
   firebase_messaging: ^10.0.0
   shared_preferences: ^2.0.5
@@ -63,7 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icon-flamer.png
-    - assets/todo-draw.svg
+    - assets/todo-draw.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
