--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   auto_size_text: ^3.0.0-nullsafety.0
   github_sign_in: ^0.0.4
   google_api_availability: ^3.0.1
+  platform_detect: ^2.0.0
 
 
 dev_dependencies:
